update breeze and npm install

--- a/infra/docker/nginx/default.conf
+++ b/infra/docker/nginx/default.conf
@@ -23,6 +23,9 @@ server {
 
     error_page 404 /index.php;
 
+    http {
+        client_max_body_size 10M;
+    }
     location ~ \.php$ {
         fastcgi_pass app:9000;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
